--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/dotenv": "^4.4",
         "symfony/maker-bundle": "^1.30",
         "symfony/phpunit-bridge": "^4.4"
