--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/annotations": "^1.12",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.5",
@@ -24,10 +25,14 @@
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.4.*",
+        "symfony/browser-kit": "^4.4",
+        "symfony/css-selector": "^4.4",
+        "symfony/dom-crawler": "4.4.*",
         "symfony/flex": "^1.12",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "^4.4",
         "symfony/monolog-bundle": "^3.1",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
@@ -41,10 +46,11 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.5",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
         "symfony/dotenv": "^4.4",
-        "symfony/maker-bundle": "^1.30",
-        "symfony/phpunit-bridge": "^4.4"
+        "symfony/maker-bundle": "^1.30"
     },
     "config": {
         "preferred-install": {
