--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,12 +10,17 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: ~
+            anonymous: lazy
             provider: users_in_memory
             form_login:
                 login_path: login
@@ -24,6 +29,10 @@ security:
                 default_target_path: /
             logout:
                 path: /logout
+                target: /login
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -37,3 +46,5 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         #- { path: ^/, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
