--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,14 +22,9 @@ security:
         main:
             anonymous: lazy
             provider: users_in_memory
-            form_login:
-                login_path: login
-                check_path: login_check
-                always_use_default_target_path: true
-                default_target_path: /
             logout:
                 path: /logout
-                target: /login
+                target: app_login
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
@@ -44,7 +39,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        #- { path: ^/, roles: ROLE_USER }
+        - { path: ^/users, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
