--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "saro0h/to-do-list",
+    "description": " ",
     "license": "proprietary",
     "type": "project",
     "autoload": {
@@ -21,6 +22,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.5",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/framework-extra-bundle": "^6.1",
         "stof/doctrine-extensions-bundle": "^1.6",
