--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,14 +6,10 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
-        in_database:
-            entity:
-                class: App\Entity\User
-                property: username
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: username
 
     firewalls:
         dev:
@@ -41,5 +37,7 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/users, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER }
+
+    #It means that a user with ROLE_ADMIN has also the ROLE_USER
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
